--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -97,4 +97,6 @@ volumes:
     accessModes: ReadWriteOnce
     size: 20Gi
     mountPath: /prometheus
+alertmanager:
+  enable: false
 selectPort: true
