--- a/helm/prometheus/templates/kube-state-metrics-rbac-setup.yaml
+++ b/helm/prometheus/templates/kube-state-metrics-rbac-setup.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: kube-state-metrics
+  name: kube-state-metrics-{{ .Release.Name }}
 rules:
 - apiGroups: [""]
   resources:
@@ -45,11 +45,11 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: kube-state-metrics
+  name: kube-state-metrics-{{ .Release.Name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: kube-state-metrics
+  name: kube-state-metrics-{{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
   name: kube-state-metrics
